# beaker

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BEAKER_API_DESIGN.md  BEAKER_DRY_ANALYSIS.md  Cargo.toml  DETECTION_REVAMP_PLAN.md  NOTICE  PIPELINE_PLANNING.md  README.md  TESTING.md  TOOL_INSTALL_SUMMARY.md  backfill_onnx.py  convert_to_yolo.py  example-2-birds.beaker.toml  example.beaker.toml  export_to_onnx.py  file_io_assessment.py  infer.py  inspect-model.py  justfile  main.py  pyproject.toml  release.py  rename_tags.py  ruff.toml  train.py  upload_train.py
beaker/: Cargo.toml  METADATA_TESTING_STRATEGY.md  Makefile  README.md  TODOs.md  __init__.py  benchmark.py  benchmark_results.json  build.rs  example_crop.jpg.d  infer.py  line_counts.md  line_counts.txt
beaker-gui/: Cargo.toml  README.md  justfile  package-lock.json  package.json
beaker-gui/docs/: file-dialog-non-blocking-pattern.md
beaker-gui/src/: app.css  app.rs  lib.rs  main.rs  recent_files.rs  style.rs
beaker-gui/src-tauri/: Cargo.toml  tauri.conf.json
beaker-gui/src-tauri/capabilities/: default.json
beaker-gui/src-tauri/src/: lib.rs  main.rs
beaker-gui/src-tauri/src/commands/: detection.rs  mod.rs
beaker-gui/src/lib/api/: detection.ts
beaker-gui/src/lib/components/: DetectionPanel.svelte
beaker-gui/src/lib/stores/: detection.ts
beaker-gui/src/lib/types/: beaker.ts
beaker-gui/src/routes/: +page.svelte
beaker-gui/src/views/: detection.rs  directory.rs  mod.rs  welcome.rs
beaker-gui/tests/: gui_tests.rs  processing_events_test.rs
beaker-gui/tests/snapshots/: README.md
beaker-rs/: .gitignore  Cargo.toml  README.md  TODOs.md  benchmark.py  build.rs  plan.md
beaker-rs/.cargo/: config.toml
beaker-rs/src/: cutout_postprocessing.rs  cutout_preprocessing.rs  cutout_processing.rs  head_detection.rs  lib.rs  main.rs  model_cache.rs  onnx_session.rs  raw_processing.rs  shared_metadata.rs  yolo_postprocessing.rs  yolo_preprocessing.rs
beaker-rs/tests/: README.md  integration_tests.rs
beaker/docs/dev/: make.md
beaker/fonts/: README.md
beaker/llm_notes/: BEAKER_API_DESIGN.md  DETECTION_REVAMP_PLAN.md  METADATA_TESTING_STRATEGY.md  model_processing_analysis.md
beaker/src/: blur_detection.rs  cache_common.rs  color_utils.rs  config.rs  cutout_preprocessing.rs  cutout_processing.rs  depfile_generator.rs  detection.rs  detection_obj.rs  gui_api.rs  head_detection.rs  image_input.rs  lib.rs  main.rs  mask_encoding.rs  model_access.rs  model_cache.rs  model_processing.rs  onnx_session.rs  output_manager.rs  proc_macro_stamp_tests.rs  progress.rs  quality_processing.rs  quality_types.rs  quality_visualization.rs  rfdetr.rs  rfdetr_postprocessing.rs  rfdetr_preprocessing.rs  shared_metadata.rs  stamp_manager.rs  yolo.rs  yolo_postprocessing.rs
beaker/tests/: .gitignore  PARALLEL_STRESS_TEST_PLAN.md  PHASE_2_COMPLETION_REPORT.md  README.md  blur_detection_backward_compat_test.rs  blur_detection_test.rs  cache_stats_integration_test.rs  cli_model_tests.rs  collision_detection_tests.rs  config_test.rs  env_variable_tests.rs  integration_tests.rs  make_integration.rs  metadata_based_tests.rs  metadata_test_framework.rs  phase_2_stress_tests.rs  quality_command_test.rs  quality_debug_images_test.rs  quality_integration_test.rs  quality_params_test.rs  quality_visualization_test.rs  test_performance_tracker.rs
beaker/tests/make_integration/: .gitignore  Makefile  Makefile.alt_model  Makefile.custom  README.md  test_make_integration.sh
beaker/tests/make_integration/stamps/: cfg-cutout-f5fc808f3ba2145dcb62602988a66eea48d552bf38c1d8a216d6089d174fde55.stamp
beaker/tests/stress/: mock_servers.rs  mod.rs  tests.rs
detect_rfdetr/: .envrc  .gitignore  README.md  convert_cub_to_coco_format.py  explore_dataloader.py  import_script.py  lens.py  plot_class_map.py  pull_runs.sh  pyproject.toml  symlink_data.py  test_orient.py  train.py  train_debug.py  visualize_attention.py  visualize_samples.py
detect_rfdetr/onnx_export/: main.py  pyproject.toml  run_export.py  test_orient.py
detect_rfdetr/rfdetr/: config.py  detr.py  main.py  pyproject.toml
detect_rfdetr/rfdetr/datasets/: coco.py  coco_eval.py  transforms.py
detect_rfdetr/rfdetr/deploy/: benchmark.py  export.py
detect_rfdetr/rfdetr/deploy/_onnx/: optimizer.py
detect_rfdetr/rfdetr/models/: lwdetr.py  position_encoding.py  transformer.py
detect_rfdetr/rfdetr/models/backbone/: backbone.py  projector.py
detect_rfdetr/rfdetr/models/ops/functions/: __init__.py  ms_deform_attn_func.py
detect_rfdetr/rfdetr/models/ops/modules/: ms_deform_attn.py
detect_rfdetr/rfdetr/rfdetr/: __init__.py  detr.py  main.py
detect_rfdetr/rfdetr/rfdetr/datasets/: coco.py  o365.py
detect_rfdetr/rfdetr/rfdetr/models/: lwdetr.py
detect_rfdetr/rfdetr/rfdetr/util/: drop_scheduler.py
detect_rfdetr/rfdetr/src/rfdetr/: __init__.py  detr.py  engine.py
detect_rfdetr/rfdetr/src/rfdetr/cli/: main.py
docs/demos/iced/: Cargo.toml  README.md
docs/demos/iced/src/: main.rs
docs/demos/iced/tests/: app_screenshot_test.rs  integration_test.rs  screenshot_test.rs
pose_model/: .gitignore  README.md  TODOs.md  analyze_confidence_methods.py  batch_inference.py  compare_pytorch_onnx.py  debug_coordinates.py  debug_inference.py  debug_test_model.py  export_vhr_birdpose.py  final_verification.py  pyproject.toml  script.py  summarize_checkpoint.py  test_inference.py  test_softmax.py  verify_keypoints.py
pose_model/upstream/: README.md  __init__.py  base_backbone.py  cross_attn.py  pose_vhr.py  utils.py  vit.py
quality_model/: .gitignore  README.md  create-release.sh  export.py  pyproject.toml  run_onnx.py  script.py
quality_model/paq2piq/: DiscriminativeLR.py  common.py  dataset.py  inference_model.py  metric.py  model.py  qmap.py  trainer.py
quantizations/: .gitignore  BEAKER_CLI_INTEGRATION.md  FILE_PATH_CLASH_ANALYSIS.md  README.md  pyproject.toml  quality.py  rfdetr.py  test_beaker_comparisons.py
quantizations/src/quantizations/: __init__.py  cli.py  comparisons.py  downloader.py  inference.py  quantizer.py  uploader.py  validator.py  yolov8.py
(+114 files in other folders)
