[workspace]
resolver = "2"
members = [
    "beaker",
]

[workspace.dependencies]

# ───────────────────────────────────────────────────────────────
# Profiles (moved from beaker/Cargo.toml for workspace compatibility)
# ───────────────────────────────────────────────────────────────
[profile.release]
lto            = true
codegen-units  = 1
panic          = "abort"
strip          = true
rpath          = true

[profile.dev]
rpath = true
