[project]
name = "bird-head-detector"
version = "0.1.0"
description = "Detect bird heads in images using YOLOv8"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core inference dependencies only
    "numpy>=2.3.2",
    "opencv-python>=4.8.0",
    "ultralytics>=8.3.172",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
# Training and experiment tracking dependencies
training = [
    "comet-ml>=3.41.0",
    "pyyaml>=6.0",
]

# Data preprocessing dependencies
preprocessing = [
    "pillow>=11.3.0",
    "polars>=1.32.0",
    "tqdm>=4.66.0",
]

# All development dependencies (includes training + preprocessing)
dev = [
    "bird-head-detector[training,preprocessing]",
    "ruff>=0.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
bird-head-detector = "bird_head_detector.infer:main"

[project.urls]
"Homepage" = "https://github.com/ericphanson/bird-head-detector"
"Repository" = "https://github.com/ericphanson/bird-head-detector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E722",  # bare except (sometimes needed for broad exception handling)
    "F841",  # assigned but never used (common in tests)
    "B007",  # loop variable not used in body (common in enumerate)
    "E402",  # module level import not at top (needed for dynamic imports)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
