[package]
name = "beaker-gui"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "beaker-gui"
path = "src/main.rs"

[lib]
name = "beaker_gui"
path = "src/lib.rs"

[dependencies]
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["image"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
beaker = { path = "../beaker" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17"

[dev-dependencies]
egui_kittest = { version = "0.30", features = ["wgpu", "snapshot"] }
