[package]
name = "beaker"
version = "0.1.0"
edition = "2021"
description = "Detect bird heads in images using YOLOv8 (Rust implementation)"
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/ericphanson/beaker"
authors = ["Eric Hanson"]

[[bin]]
name = "beaker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ort = "=2.0.0-rc.10"  # ORT v2 release candidate
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.16"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
ureq = { version = "2.10", features = ["json"] }
serde_json = "1.0"

[features]
default = ["cpu", "coreml"]
cpu = []
coreml = ["cpu", "ort/coreml"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
rpath = true

[profile.dev]
rpath = true
