[package]
name         = "beaker"
version      = "0.1.0"
edition      = "2021"
description  = "Detect bird heads in images using YOLOv8 (Rust implementation)"
readme       = "README.md"
license      = "AGPL-3.0"
repository   = "https://github.com/ericphanson/beaker"
authors      = ["Eric Hanson"]

[[bin]]
name = "beaker"
path = "src/main.rs"

# ───────────────────────────────────────────────────────────────
# Base dependencies (all targets)
# ───────────────────────────────────────────────────────────────
[dependencies]
clap   = { version = "4.5", features = ["derive"] }
# CPU EP is available on every platform, so make it the universal default
ort    = { version = "=2.0.0-rc.10", default-features = false, features = ["cpu"] }
image  = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.16"
anyhow  = "1.0"
serde   = { version = "1.0", features = ["derive"] }
toml    = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
glob    = "0.3"

# ───────────────────────────────────────────────────────────────
# Extra dependencies that *only* compile on macOS
# ───────────────────────────────────────────────────────────────
[target.'cfg(target_os = "macos")'.dependencies]
# Pull the Core ML execution provider; binaries exist only for Apple targets
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["coreml"] }  #

# ───────────────────────────────────────────────────────────────
[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
ureq        = { version = "2.10", features = ["json"] }
serde_json  = "1.0"

# ───────────────────────────────────────────────────────────────
# Profiles
# ───────────────────────────────────────────────────────────────
[profile.release]
lto            = true
codegen-units  = 1
panic          = "abort"
strip          = true
rpath          = true

[profile.dev]
rpath = true
