[package]
name         = "beaker"
version      = "0.1.1"
edition      = "2021"
description  = "Detect bird heads in images using YOLOv8 (Rust implementation)"
readme       = "README.md"
license      = "AGPL-3.0"
repository   = "https://github.com/ericphanson/beaker"
authors      = ["Eric Hanson"]

[[bin]]
name = "beaker"
path = "src/main.rs"

[dependencies]                  # (shared by every target)
clap   = { version = "4.5", features = ["derive"] }
ort    = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "download-binaries"] }
image  = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.16"
anyhow  = "1.0"
serde   = { version = "1.0", features = ["derive"] }
toml    = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
glob    = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
# Add Core ML only where the pre-built binary exists
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["coreml", "download-binaries", "ndarray"] }
# ───────────────────────────────────────────────────────────────
[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
ureq        = { version = "2.10", features = ["json"] }
serde_json  = "1.0"

# ───────────────────────────────────────────────────────────────
# Profiles
# ───────────────────────────────────────────────────────────────
[profile.release]
lto            = true
codegen-units  = 1
panic          = "abort"
strip          = true
rpath          = true

[profile.dev]
rpath = true
