[package]
name         = "beaker"
version      = "0.3.0"
edition      = "2021"
description  = "Process bird images with ML models"
readme       = "README.md"
license      = "AGPL-3.0"
repository   = "https://github.com/ericphanson/beaker"
authors      = ["Eric Hanson"]

[[bin]]
name = "beaker"
path = "src/main.rs"

[dependencies]                  # (shared by every target)
clap   = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0"
log = "0.4"
env_logger = "0.11"
ort    = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "download-binaries"] }
image  = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.16"
anyhow  = "1.0"
serde   = { version = "1.0", features = ["derive"] }
toml    = "0.9"
chrono  = { version = "0.4", features = ["serde"] }
glob    = "0.3"
dirs    = "6.0"
sha2    = "0.10"
md5     = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
base64  = "0.22"
flate2  = "1.1"
colored = "3.0.0"
indicatif = "0.18"
once_cell = "1.21.3"
indicatif-log-bridge = "0.2.3"
serde_json = "1"
beaker-stamp = { path = "../beaker-stamp" }
beaker-stamp-derive = { path = "../beaker-stamp-derive" }
imageproc = "0.25.0"
ab_glyph = "0.2.31"

[target.'cfg(target_os = "macos")'.dependencies]
# Add Core ML only where the pre-built binary exists
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["coreml", "download-binaries", "ndarray"] }
# ───────────────────────────────────────────────────────────────
[dev-dependencies]
tempfile = "3.8"
paste = "1.0"
