[project]
name = "detect-rfdetr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rfdetr",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "comet-ml>=3.50.0",
    "ptpython>=3.0.30",
    "torchlens>=0.1.35",
    "onnxruntime>=1.22.1",
]

[tool.uv.sources]
rfdetr = { path = "rfdetr", editable = true }
