[project]
name = "pose-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "onnx>=1.18.0",
    "onnx-simplifier>=0.4.36",
    "onnxconverter-common>=1.15.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "pyyaml>=6.0.2",
    "timm>=1.0.19",
    "torch>=2.7.1",
]
