[project]
name = "quality-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "onnxsim>=0.4.36",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "ptpython>=3.0.30",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
