[project]
name = "quantizations"
version = "0.1.0"
description = "Model quantization scripts for Beaker ONNX models"
readme = "README.md"
authors = [
    { name = "Eric Hanson", email = "eric@ericphanson.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "onnx>=1.12.0,<1.18.0",
    "onnxruntime>=1.22.0",
    "pillow>=11.3.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "opencv-python>=4.8.0",
    "click>=8.0.0",
    "onnxsim>=0.4.0",
    "matplotlib>=3.7.0",
    "torch>=2.8.0",
    "ultralytics>=8.3.177",
]

[project.scripts]
quantize-models = "quantizations.cli:main"

[project.urls]
"Homepage" = "https://github.com/ericphanson/beaker"
"Repository" = "https://github.com/ericphanson/beaker"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E722", # bare except (sometimes needed for broad exception handling)
    "F841", # assigned but never used (common in tests)
    "B007", # loop variable not used in body (common in enumerate)
    "E402", # module level import not at top (needed for dynamic imports)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
