[project]
name = "onnx-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx>=1.18.0",
    "onnx-graphsurgeon>=0.5.8",
    "onnxruntime>=1.22.1",
    "onnxsim>=0.4.36",
    "ptpython>=3.0.30",
    "rfdetr",
    "torch>=2.8.0",
]

[tool.uv.sources]
rfdetr = { path = "../rfdetr", editable = true }
