[package]
name = "iced-demo"
version = "0.1.0"
edition = "2021"

# Empty workspace to keep this isolated from main beaker workspace
[workspace]

[dependencies]
iced = { version = "0.13", features = ["tiny-skia", "advanced"] }

[dev-dependencies]
image = "0.25"
tokio = { version = "1", features = ["full"] }
iced_tiny_skia = "0.13"

[[bin]]
name = "hello_world"
path = "src/main.rs"
